--- a/css/_header.scss
+++ b/css/_header.scss
@@ -9,22 +9,24 @@ header {
     margin-bottom: 10px;
     #checkbox {
         visibility: hidden;
+        margin: 0px;
     }
     .logomobile {
         display: initial;
         width: 125px;
+        height: 50px;
         justify-self: flex-start;
         padding-top: 1rem;
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
-    }
-    .navheader {
-        display: none;
+        a div {
+            width: 125px;
+            height: 50px;
+        }
     }
     label {
         justify-self: flex-end;
-        float: right;
         cursor: pointer;
         margin-top: 15px;
         grid-column-start: 2;
@@ -142,7 +144,14 @@ a {
     .logodesk {
         display: initial;
         width: 125px;
+        height: 50px;
         margin-left: 40%;
+        justify-self: flex-start;
+        padding-bottom: 15px;
+        a div {
+            width: 125px;
+            height: 70px;
+        }
     }
     .sticky {
         position: fixed;
@@ -173,7 +182,7 @@ a {
         position: static;
         margin-bottom: 60px;
         height: 90px;
-        justify-items: center;
+        justify-items: flex-end;
         align-items: center;
         .logomobile {
             display: none;
@@ -184,15 +193,15 @@ a {
         }
         .plusbtn {
             display: flex;
-            justify-self: center;
+            justify-self: flex-end;
             background-color: initial;
             justify-content: center;
             align-content: center;
+            grid-column-start: 4;
             margin-right: 110px;
-            img {
+            div {
                 width: 54px;
                 height: 54px;
-                justify-self: center;
             }
         }
         div {
@@ -250,35 +259,5 @@ a {
                 }
             }
         }
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    header {
-        background-color: #37383C;
-        color: white;
-    }
-
-    label {
-        span {
-            background-color: white;
-            &::before{
-                background-color: inherit;
-            }
-            &::after{
-                background-color: inherit;
-            }
-        }
-    }
-
-    ul {
-        position: absolute;
-        background-color: black;
-        li {
-            color: white;
-        }
-    }
-    header.light-theme {
-        background-color: white;
     }
 }
