--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -14,6 +14,7 @@
             height: 270px;
             grid-row-start: 1;
             grid-column-start: 1;
+            z-index: 20;
         }
     }
     .btnholder {
