--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -4,12 +4,12 @@
 @import "nav";
 @import "trending";
 @import "footer";
-@import "misgifos";
 @import "creategifs";
 @import "btn";
 @import "favoritos";
 @import "placegiftcrafter";
 @import "modenocday";
+@import "maxpopup";
 
 * {
     padding: 0;
