--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -1,53 +1,87 @@
-#gifobuilder{
+#gifobuilder, #misFavor{
     display: grid;
     gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    width: 100%;
-    .placeholder {
+    width: 90%;
+    gap: 0 21px;
+    margin-left: 5%;
+    >.placeholder {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         width: 100%;
-        height: auto;
-        img {
-            height: 270px;
-            grid-row-start: 1;
-            grid-column-start: 1;
-            z-index: 20;
+        justify-self: center;
+        justify-items: center;
+        .cover {
+            display: none;
         }
-    }
-    .btnholder {
-        display: none;
-        width: 100%;
-        height: 45px;
-        z-index: 2;
-        justify-content: flex-end;
-        grid-row-start: 1;
-        grid-column-start: 1;
-        .iconholder {
-            width: 45px;
-            margin-right: 10px;
-            height: 45px;
-            z-index: 2;
+        img {
+            width: 100%;
+            height: 100%;
+            z-index: 5;
+        }
+        .btnholder {
+            display: none;
         }
     }
 }
 
-/*
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>movies</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <input type="search" id="search">
-    <div id="conteiner"></div>
-    <script src="./movies.js"></script>
-</body>
-</html>
-*/
+
+
+@media (min-width: 840px) {
+    #gifobuilder, #misFavor{
+        display: grid;
+        gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        width: 100%;
+        margin: 0px;
+        gap: 10px 21px;
+        >.placeholder {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            width: 100%;
+            height: auto;
+            justify-self: center;
+            justify-items: center;
+            .cover {
+                display: initial;
+                grid-row-start: 1;
+                grid-column-start: 1;
+                z-index: 2;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+            }
+            .cover--active {
+                background: rgba(87, 46, 229, 0.7) !important;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                grid-row-start: 1;
+                grid-column-start: 1;
+            }
+            .btnholder {
+                display: none;
+                width: 100%;
+                height: 45px;
+                z-index: 3;
+                justify-content: flex-end;
+                grid-row-start: 1;
+                grid-column-start: 1;
+                .iconholder {
+                    width: 45px;
+                    margin-right: 10px;
+                    height: 45px;
+                    z-index: 2;
+                }
+            }
+        }
+
+    }
+
+}
