--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@ header {
       grid-template-rows: auto;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  z-index: 2;
+  z-index: 10;
   margin-bottom: 10px;
 }
 
@@ -104,7 +104,7 @@ header ul {
   -webkit-transition: height 0.2s ease-in-out;
   transition: height 0.2s ease-in-out;
   padding-top: 20px;
-  z-index: 2;
+  z-index: 10;
 }
 
 header ul li {
@@ -584,16 +584,14 @@ nav .navsphere input {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    width: 90%;
+    width: 100%;
     height: 275px;
-    margin-right: 94px;
-    margin-left: 94px;
     margin-bottom: 182px;
     margin-top: 53px;
     overflow: hidden;
   }
   .trendinggifos .gallery #gifs {
-    width: 1050px;
+    width: 80%;
     height: 100%;
     margin: 0px;
     overflow: hidden;
@@ -685,75 +683,6 @@ footer .copyright {
   }
   footer .sharing div {
     padding: 20px;
-  }
-}
-
-.misgifos {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  gap: 21px;
-  margin: 0px 21px;
-}
-
-.misgifos h1 {
-  font-size: 25px;
-}
-
-.misgifos img {
-  width: 25%;
-  height: 120px;
-  margin-bottom: 20px;
-}
-
-.gifosimg {
-  margin-bottom: 3rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: auto 1fr;
-      grid-template-rows: auto 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  width: 70%;
-  padding: 0rem 15%;
-}
-
-.gifosimg h1 {
-  font-size: 25px;
-}
-
-.gifosimg img {
-  -ms-grid-column-align: center;
-      justify-self: center;
-  width: 28px;
-}
-
-#gifobuilder, #misFavor {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 300px 300px;
-      grid-template-columns: 300px 300px;
-}
-
-#gifobuilder img, #misFavor img {
-  width: 260px;
-  height: 200px;
-}
-
-@media (min-width: 840px) {
-  #gifobuilder {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 260px 260px 260px 260px;
-        grid-template-columns: 260px 260px 260px 260px;
-    -ms-grid-rows: 200px;
-        grid-template-rows: 200px;
-    gap: 2%;
-    margin-bottom: 40px;
-  }
-  #gifobuilder img {
-    height: 200px;
   }
 }
 
@@ -964,18 +893,20 @@ footer .copyright {
   height: 100px;
 }
 
-#gifobuilder {
+#gifobuilder, #misFavor {
   display: -ms-grid;
   display: grid;
   gap: 10px;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
-  width: 100%;
+  width: 90%;
+  gap: 0 21px;
+  margin-left: 5%;
 }
 
-#gifobuilder .placeholder {
+#gifobuilder > .placeholder, #misFavor > .placeholder {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr;
@@ -983,56 +914,95 @@ footer .copyright {
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
   width: 100%;
-  height: auto;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  justify-items: center;
 }
 
-#gifobuilder .placeholder img {
-  height: 270px;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  z-index: 20;
-}
-
-#gifobuilder .btnholder {
+#gifobuilder > .placeholder .cover, #misFavor > .placeholder .cover {
   display: none;
+}
+
+#gifobuilder > .placeholder img, #misFavor > .placeholder img {
   width: 100%;
-  height: 45px;
-  z-index: 2;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
+  height: 100%;
+  z-index: 5;
 }
 
-#gifobuilder .btnholder .iconholder {
-  width: 45px;
-  margin-right: 10px;
-  height: 45px;
-  z-index: 2;
+#gifobuilder > .placeholder .btnholder, #misFavor > .placeholder .btnholder {
+  display: none;
 }
 
-/*
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>movies</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <input type="search" id="search">
-    <div id="conteiner"></div>
-    <script src="./movies.js"></script>
-</body>
-</html>
-*/
+@media (min-width: 840px) {
+  #gifobuilder, #misFavor {
+    display: -ms-grid;
+    display: grid;
+    gap: 10px;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    width: 100%;
+    margin: 0px;
+    gap: 10px 21px;
+  }
+  #gifobuilder > .placeholder, #misFavor > .placeholder {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    width: 100%;
+    height: auto;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    justify-items: center;
+  }
+  #gifobuilder > .placeholder .cover, #misFavor > .placeholder .cover {
+    display: initial;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  #gifobuilder > .placeholder .cover--active, #misFavor > .placeholder .cover--active {
+    background: rgba(87, 46, 229, 0.7) !important;
+  }
+  #gifobuilder > .placeholder img, #misFavor > .placeholder img {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+  }
+  #gifobuilder > .placeholder .btnholder, #misFavor > .placeholder .btnholder {
+    display: none;
+    width: 100%;
+    height: 45px;
+    z-index: 3;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+  }
+  #gifobuilder > .placeholder .btnholder .iconholder, #misFavor > .placeholder .btnholder .iconholder {
+    width: 45px;
+    margin-right: 10px;
+    height: 45px;
+    z-index: 2;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #2f2f2f;
@@ -1213,6 +1183,111 @@ footer .copyright {
   body.light-theme .navsphere input {
     color: black;
   }
+}
+
+.maximizar {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.95);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 90;
+}
+
+.maximizar__container {
+  width: 340px;
+  height: 255px;
+}
+
+@media (min-width: 1366px) {
+  .maximizar__container {
+    width: 600px;
+    height: 450px;
+  }
+}
+
+.maximizar__container-close {
+  width: 20px;
+  height: 10%;
+  background: url("../assets/images/close.svg") center no-repeat;
+  margin-left: 0;
+  margin-left: auto;
+}
+
+.maximizar__container-image {
+  width: 100%;
+  height: 75%;
+}
+
+.maximizar__container-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.maximizar__container-data {
+  width: 100%;
+  height: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.maximizar__container-data .text {
+  width: 85%;
+  text-align: left;
+  color: black;
+}
+
+.maximizar__container-data .text h1 {
+  font-size: 1.25rem;
+  margin-bottom: 0.25rem;
+  text-align: left;
+}
+
+.maximizar__container-data .text h2 {
+  font-size: 0.85rem;
+  text-align: left;
+  color: black;
+}
+
+.maximizar__container-data .actions {
+  width: 15%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 0.5rem;
+}
+
+.maximizar__container-data .actions .favorites,
+.maximizar__container-data .actions .download {
+  width: 20px;
+  height: 20px;
+}
+
+.maximizar__container-data .actions .favorites {
+  background: url("../assets/images/icon-fav.svg") center no-repeat;
+  margin: 0 0.25rem;
+}
+
+.maximizar__container-data .actions .download {
+  background: url("../assets/images/icon-download.svg") center no-repeat;
 }
 
 * {
